k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guardian-ai-service
spec:
  selector:
    app: guardian-ai
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
    - protocol: TCP
      port: 8081
      targetPort: 3001
    - protocol: TCP
      port: 8082
      targetPort: 3003
    - protocol: TCP
      port: 8083
      targetPort: 3004
    - protocol: TCP
      port: 8084
      targetPort: 3005
  type: ClusterIP
